core/k8s/Middleware.yml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: idp-ingress-middleware
  namespace: default
spec:
  stripPrefix:
    prefixes:
      - /idp
