core/k8s/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: starry-idp-svc
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app: starry-idp
