core/k8s/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idp-ingress
  namespace: default
spec:
  ingressClassName: traefik
  rules:
    - host: www.lucasji.cn
      http:
        paths:
          - path: /idp
            pathType: Prefix
            backend:
              service:
                name: starry-idp-svc
                port:
                  number: 8000
