core/k8s/IngressRoute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: idp-ingress-route
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: "Host(`api.idp.lucasji.cn`)"
      services:
        - kind: Service
          name: starry-idp-backend-svc
          port: 8000
